2006-10-09  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in (OCTAVE_CONF_CURL_LIBS): Substitute.
	* toplev.cc (octave_config_info): Add CURL_LIBS to the list.

2006-10-09  Alexander Barth  <abarth@marine.usf.edu>

	* DLD-FUNCTIONS/urlwrite.cc: New file providing urlwrite and urlread.

2006-10-09  John W. Eaton  <jwe@octave.org>

	* pt-mat.cc (tree_matrix::dup): Append new elements to new matrix.
	* pt-cell.cc (tree_cell::dup): Append new elements to new cell array.

2006-10-04  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.9+.

	* DLD-FUNCTIONS/__gnuplot_raw__.l (F__clear_plot_window__):
	Rename from Fclearplot.  Only clear plot window.

2006-10-03  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/luinc.cc (Fluinc): Avoid crash if SparseLU or
	SparseComplexLU constructor fails.

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx):
	Delete unused variable.

2006-10-03  David Bateman  <dbateman@free.fr>

	* Makefile.in (OCT_LINK_DEPS) Include $(CAMD_LIBS) in the list.
	(octave$(EXEEXT)): Include $(CAMD_LIBS) in link command.

2006-10-02  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.9.
	(OCTAVE_API_VERSION): Now api-v22.
	(OCTAVE_RELEASE_DATE): Now 2006-10-02.

	* pr-output.cc (pr_plus_format): Use "inline" instead of "static
	inline" for template functions to avoid problems when not
	compiling with 	g++.

	* mex.cc (call_mex): Delete elements of argout.
	From Kai Labusch <labusch@inb.uni-luebeck.de>.

2006-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/spfind.cc (sparse_find_non_zero_elem_idx):
	Leading dimension is NR, not NC.

	* Makefile.in (DEP_5): Include oct-errno.cc in the list.

2006-09-27  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (abs): New template function.  Instantiate for
	unsigned types.

2006-09-27  David Bateman  <dbateman@free.fr>

	* file-io.cc (Fsprintf): If fmt is an sq_string, return an sq_string.

	* DLD-FUNCTIONS/sparse.cc (spfind, sparse_find): Delete.